v0.2.2-1
added health bar
revamped DrawUtil
made units collision radius bigger
made window appear in front on startup
misc changes